change port to 80

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,17 @@ script:
   - echo "Do all the tests"
 
 after_success:
-  # Deploy to AWS
+  ###################
+  ## Deploy to AWS ##
+  ###################
   - docker --version  # document the version travis is using
   - pip install --user awscli # install aws cli w/o sudo
   - export PATH=$PATH:$HOME/.local/bin # put aws in the path
   - eval $(aws ecr get-login --no-include-email --region us-east-2) #needs AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY envvars
   - docker tag tecbeast/docker-aws-demo:latest 114300403495.dkr.ecr.us-east-2.amazonaws.com/testing:latest
   - docker push 114300403495.dkr.ecr.us-east-2.amazonaws.com/testing:latest
-  # Deploy to Docker Hub
+  ##########################
+  ## Deploy to Docker Hub ##
+  ##########################
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - docker push tecbeast/docker-aws-demo
